--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,11 @@ android {
 
     defaultConfig {
         applicationId "cn.com.broadlink.blappsdkdemo.baihk"
+//        applicationId "cn.com.broadlink.econtrol.plus.test"
         minSdkVersion 9
         targetSdkVersion 22
         versionCode 1
-        versionName "1.0"
+        versionName "1.1"
     }
     buildTypes {
         release {
@@ -26,7 +27,7 @@ dependencies {
     compile files('libs/libImageLoader.jar')
     compile 'com.ibroadlink:BLLetAccountAndroid:2.6.6'
     compile 'com.ibroadlink:BLLetFamilyAndroid:2.6.6'
-    compile 'com.ibroadlink:BLLetCoreAndroid:2.6.9'
+    compile 'com.ibroadlink:BLLetCoreAndroid:2.6.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:23.4.0'
