--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="cn.com.broadlink.blappsdkdemo">
 
     <!-- SD卡读写权限 -->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <!-- 连接互联网Internet权限 -->
@@ -15,16 +14,16 @@
     <application
         android:name=".BLApplcation"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
             android:name="LET_LICENSE"
             android:value="CceFpDt7d+r4pZ8KP74tbpNSf9Ug9pP+ytpIXApsCYpvvDEid0s8SdJtKgQMc5QmUsWWVwAAAACvEX37zpG5Wgi/Mlnda1pd2B9J96AQz9N0vO6WstfgR9yEgbkpFXFyJbsnfyHXt8pOdkTVo81rQrPhkOnhmpQBsEkbxXTfoUSQjDzWcfVjcAAAAAA=" />
-        <!-- <meta-data -->
-        <!-- android:name="LET_LICENSE" -->
-        <!-- android:value="0PlPqgTGPZt7CwNNz4lWVm7qQZqm8AdPyooafIrN9QX5UING6RYrag2V2nFqWRIQrFDxVgAAAADoWWz5UyBiHvQQIPyIUhi4XFSykPGAqniglnoIUWhvuHCgxWxDEyF0yb0xHzyz6V5BLR6D0KoiI6QqjWxRKs8JsEkbxXTfoUSQjDzWcfVjcBAAAADp06OIOk1mH/qjm7XF95qOxpLv1t9uNsVE3e4wHc8mrB+SMRJcG2nmzb9yL3Mu09S5XRVHUoOQTMAYYtozBSYvlMaOcIFoWVVAgBZJjiSMHQ==" /> -->
+         <!--<meta-data-->
+         <!--android:name="LET_LICENSE"-->
+         <!--android:value="vL+QKsjdYlYmBSFRDXyODXM34LGAgrLzG36TDA3+rHNqWOBZ9Z96sm9wMqqwyWo0knHbWAAAAADUQSajZpK4LySMhnlkW3G81jNZGl8Gj0M3TRWBiON6x9m3k0d2hvgWfetMpOK+1IJQCGnYoGAWDBFGs6J0Q8UJsEkbxXTfoUSQjDzWcfVjcAAAAAA=" />-->
         <meta-data
             android:name="LET_CHANNEL"
             android:value="" />
