--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,10 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.ibroadlink:BLLetCoreAndroid:2.7.1'
+    compile 'com.ibroadlink:BLLetCoreAndroid:2.7.+'
     compile 'com.ibroadlink:BLLetAccountAndroid:2.6.6'
     compile 'com.ibroadlink:BLLetFamilyAndroid:2.6.6'
-    compile 'com.ibroadlink:BLLetIRCodeAndroid:2.1.0'
+    compile 'com.ibroadlink:BLLetIRCodeAndroid:2.2.0'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:23.4.0'
