--- a/gradle.properties
+++ b/gradle.properties
@@ -19,5 +19,5 @@
 
 #开启编译守护进程  该进程在第一次启动后回一直存在，当你进行二次编译的时候，可以重用该进程。
 org.gradle.daemon=true
-
 org.gradle.jvmargs=-Xmx8096m
+android.injected.testOnly=false
