--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,16 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.aliyun.ams.emas-services'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'broadlink_sdk'
+            keyPassword 'qwerasdf'
+            storeFile file('E:/Projects_sdk/broadlink_sdk.jks')
+            storePassword 'qwerasdf'
+        }
+    }
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
-
     defaultConfig {
         applicationId "com.broadlink.blappsdkdemo"
         minSdkVersion 16
@@ -17,11 +24,30 @@ android {
             moduleName "app"
         }
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
+        }
+        debug {
+            signingConfig signingConfigs.config
+        }
+
+        //修改生成的apk名字
+        applicationVariants.all { variant ->
+            variant.outputs.all { output ->
+                def versionName = android.defaultConfig.versionName
+                def time = new java.text.SimpleDateFormat("yyyy-MM-dd_HH").format(new Date())
+                def fileName
+
+                if (variant.buildType.name.equals('release')) {
+                    fileName = "sdk_demo_release_v${versionName}_${time}.apk"
+                } else if (variant.buildType.name.equals('debug')) {
+                    fileName = "sdk_demo_debug_v${versionName}_${time}.apk"
+                }
+                outputFileName = fileName
+            }
         }
     }
 }
@@ -30,19 +56,16 @@ dependencies {
     implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
     implementation 'com.ibroadlink:BLLetCoreAndroid:2.9.6'
     implementation 'com.ibroadlink:BLLetAccountAndroid:2.8.3'
-    implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.10.1'
-
+    implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.10.2'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:percent:28.0.0'
-
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.google.zxing:core:3.3.1'
-
-    debugImplementation 'com.didichuxing.doraemonkit:doraemonkit:1.1.2'
-    releaseImplementation 'com.didichuxing.doraemonkit:doraemonkit-no-op:1.1.2'
-
+    implementation 'com.didichuxing.doraemonkit:doraemonkit:1.1.2'
+    //debugImplementation 'com.didichuxing.doraemonkit:doraemonkit:1.1.2'
+    //releaseImplementation 'com.didichuxing.doraemonkit:doraemonkit-no-op:1.1.2'
     implementation 'com.aliyun.ams:alicloud-android-push:3.1.4'
 }
