1. ihg添加子设备流程修正（scan/config带pid）； 2. 红码支持matchTree方式； 3. Reset支持设置是否启用集群服务；

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
                 <action android:name="com.alibaba.sdk.android.push.RECEIVE"/>
             </intent-filter>
         </receiver>
-        
+
         <activity
             android:name=".activity.device.DevListActivity"
             android:launchMode="singleTask"
@@ -202,6 +202,12 @@
             android:theme="@style/ActivityStyle"/>
         <activity
             android:name=".activity.product.GatewaySubProductCategoryListActivity"
+            android:theme="@style/ActivityStyle"/>
+        <activity
+            android:name=".activity.irCode.IRMatchTreeMainActivity"
+            android:theme="@style/ActivityStyle"/>
+        <activity
+            android:name=".activity.irCode.IRMatchTreeDetailActivity"
             android:theme="@style/ActivityStyle"/>
     </application>
 
