--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,13 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         // 添加emas-services插件
         classpath 'com.aliyun.ams:emas-services:1.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        classpath 'com.novoda:bintray-release:0.9'
     }
 }
 
