--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,9 +54,11 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
-    implementation 'com.ibroadlink:BLLetCoreAndroid:2.9.6'
     implementation 'com.ibroadlink:BLLetAccountAndroid:2.8.3'
-    implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.10.2'
+    implementation 'com.ibroadlink:BLLetCoreAndroid:2.9.6'
+    //implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.10.3'
+    implementation project(':ircode')
+    
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
@@ -65,7 +67,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.google.zxing:core:3.3.1'
     implementation 'com.didichuxing.doraemonkit:doraemonkit:1.1.2'
-    //debugImplementation 'com.didichuxing.doraemonkit:doraemonkit:1.1.2'
-    //releaseImplementation 'com.didichuxing.doraemonkit:doraemonkit-no-op:1.1.2'
     implementation 'com.aliyun.ams:alicloud-android-push:3.1.4'
+   
 }
