--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,8 @@ dependencies {
     implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
     implementation 'com.ibroadlink:BLLetAccountAndroid:2.8.3'
     implementation 'com.ibroadlink:BLLetCoreAndroid:2.9.6'
-    //implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.10.3'
-    implementation project(':ircode')
+    implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.10.4'
+    //implementation project(':ircode')
     
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
