--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest package="cn.com.broadlink.blappsdkdemo"
           xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools">
+    
     <!-- SD卡读写权限 -->
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -11,7 +12,8 @@
     <uses-permission android:name="android.permission.INTERNET"/> <!-- 摄像头相关权限 -->
     <uses-feature android:name="android.hardware.camera"/>
     <uses-feature android:name="android.hardware.camera.autofocus"/>
-
+    
+    <!--相机权限-->
     <uses-permission android:name="android.permission.FLASHLIGHT"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -25,6 +27,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        
         <activity
             android:name=".activity.LoadingActivity"
             android:screenOrientation="portrait"
@@ -204,10 +207,10 @@
             android:name=".activity.product.GatewaySubProductCategoryListActivity"
             android:theme="@style/ActivityStyle"/>
         <activity
-            android:name=".activity.irCode.IRMatchTreeMainActivity"
+            android:name=".activity.irCode.IRCodeMatchTreeMainActivity"
             android:theme="@style/ActivityStyle"/>
         <activity
-            android:name=".activity.irCode.IRMatchTreeDetailActivity"
+            android:name=".activity.irCode.IRCodeMatchTreeDetailActivity"
             android:theme="@style/ActivityStyle"/>
     </application>
 
