1. 注册完成，toast提示并跳转到账户详情页面； 2. 新增更改邮箱和手机功能； 3. 签名文件上传； 4. ap列表全屏； 5. 子设备添加页面增加一个devSubDevAddResultQuery按钮；

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
         config {
             keyAlias 'broadlink_sdk'
             keyPassword 'qwerasdf'
-            storeFile file('E:/Projects_sdk/broadlink_sdk.jks')
+            storeFile file('./broadlink_sdk.jks')
             storePassword 'qwerasdf'
         }
     }
