1. 支持子设备定时； 2. fastcon支持单个配置； 3. 清理部分硬编码的url；

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
         </receiver>
 
         <activity
-            android:name=".activity.device.DevListActivity"
+            android:name=".activity.device.DevProbeListActivity"
             android:launchMode="singleTask"
             android:theme="@style/ActivityStyle"/>
         <activity
