由于虚拟设备/虚拟子设备等需要familyid、session等信息去云端获取数据 ，故在用户登录时默认选取第一个家庭取famlilyId。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,20 +10,42 @@ android {
             storePassword 'qwerasdf'
         }
     }
+    
     compileSdkVersion 28
     buildToolsVersion "28.0.3"
+    
     defaultConfig {
         applicationId "com.broadlink.blappsdkdemo"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.1"
-
+        flavorDimensions "default"
+        
         ndk {
             abiFilters 'armeabi'
             moduleName "app"
         }
     }
+
+//    productFlavors{
+//        baidu{
+//            
+//        }
+//        intl{
+//            
+//        }
+//    }
+//    applicationVariants.all { variant ->
+//        if (variant.flavorName.equals('baidu')) {
+//            variant.buildConfigField "boolean", "isBaidu", "true"
+//        }
+//        if (variant.flavorName.equals('intl')) {
+//            variant.buildConfigField "boolean", "isBaidu", "false"
+//        }
+//    }
+//    
+    
     buildTypes {
         release {
             minifyEnabled false
