1. 修正reset时sdk没有重新初始化的问题 2. Gateway Manage页面，新增子设备备份和还原功能（没找到可以测的设备，待自测）

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,10 +76,20 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
-    implementation 'com.ibroadlink:BLLetAccountAndroid:2.8.3'
-    implementation 'com.ibroadlink:BLLetCoreAndroid:2.9.6'
-    implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.10.4'
-    //implementation project(':ircode')
+    
+    // normal start
+    //implementation 'com.ibroadlink:BLLetCoreAndroid:2.9.6'
+    //implementation 'com.ibroadlink:BLLetAccountAndroid:2.8.3'
+    //implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.10.4'
+    // normal end
+    
+    // fot test start
+    implementation ('com.ibroadlink:BLLetAccountAndroid:2.8.3')
+    implementation project(':ircode')
+    configurations {
+        all*.exclude group:'com.ibroadlink',  module:'BLLetCoreAndroid'
+    }
+    // fot test end
     
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
