--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ android {
             abiFilters 'armeabi'
             moduleName "app"
         }
+
+        multiDexEnabled true
     }
 
 //    productFlavors{
@@ -78,19 +80,20 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     
     // normal start
-    implementation 'com.ibroadlink:BLLetCoreAndroid:2.10.1'
-    implementation 'com.ibroadlink:BLLetAccountAndroid:2.8.3'
-    implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.10.4'
+    implementation 'com.ibroadlink:BLLetCoreAndroid:2.10.+'
+    implementation 'com.ibroadlink:BLLetAccountAndroid:2.8.+'
+    implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.10.+'
     // normal end
     
-    // fot local debug start
+//    // fot local debug start
 //    implementation fileTree(include: ['*.aar'], dir: 'libs')
-//    implementation ('com.ibroadlink:BLLetAccountAndroid:2.8.3')
+//    implementation 'com.ibroadlink:BLLetAccountAndroid:2.8.3'
 //    implementation project(':ircode')
 //    configurations {
 //        all*.exclude group:'com.ibroadlink',  module:'BLLetCoreAndroid'
+//        all*.exclude group:'com.ibroadlink',  module:'BLLetBaseAndroid'
 //    }
-    // fot local debug end
+//    // fot local debug end
     
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -101,5 +104,6 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.1'
     implementation 'com.didichuxing.doraemonkit:doraemonkit:1.1.2'
     implementation 'com.aliyun.ams:alicloud-android-push:3.1.4'
-   
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.alibaba:fastjson:1.1.70.android'
 }
