[v1.1.1 -> v1.2.0] 1. 崩溃日志记录 2. 压力测试，log带执行的结果 3. 压力测试，加入sdk耗时统计 4. 压力测试，log每次start都新建一个文件 5. 子设备管理，点击个子设备，弹框提示，是否加入设备列表 6. 设备stdcontrol，param支持jsonObject 7. 更新文件保存路径 8. 新增spdemo

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
-        versionName "1.1.1"
+        versionName "1.2.0"
         flavorDimensions "default"
         
         ndk {
@@ -88,7 +88,8 @@ dependencies {
 //    // fot local debug start
 //    implementation fileTree(include: ['*.aar'], dir: 'libs')
 //    implementation 'com.ibroadlink:BLLetAccountAndroid:2.8.3'
-//    implementation project(':ircode')
+//    implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.10.+'
+//    //implementation project(':ircode')
 //    configurations {
 //        all*.exclude group:'com.ibroadlink',  module:'BLLetCoreAndroid'
 //        all*.exclude group:'com.ibroadlink',  module:'BLLetBaseAndroid'
