增加推送模版特性，还在调试

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -229,6 +229,9 @@
         <activity
             android:name=".activity.device.DevStressTestActivity"
             android:theme="@style/ActivityStyle"/>
+        <activity
+            android:name=".activity.push.PushMainActivity"
+            android:theme="@style/ActivityStyle"/>
     </application>
 
 </manifest>
