--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,12 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     
@@ -85,15 +91,28 @@ dependencies {
 //    implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.10.+'
 //    // normal end
     
+    
     // fot local debug start
-    implementation fileTree(include: ['*.aar'], dir: 'libs')
-    implementation 'com.ibroadlink:BLLetAccountAndroid:2.8.3'
-    implementation 'com.ibroadlink:BLLetBaseAndroid:2.10.+'
-    implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.10.+'
+    //implementation fileTree(include: ['*.aar'], dir: 'libs')
+    
+    //implementation 'com.ibroadlink:BLLetCoreAndroid:2.10.+' // core
+    implementation(name: 'dnasdk-debug', ext: 'aar') 
+    
+    implementation 'com.ibroadlink:BLLetBaseAndroid:2.10.+' // base
+    //implementation(name: 'blbase-debug', ext: 'aar')
+
+    implementation 'com.ibroadlink:BLLetAccountAndroid:2.8.+' // account
+    //implementation(name: 'blaccount-debug', ext: 'aar')
+    
+    implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.10.+' // ircode
     //implementation project(':ircode')
+    
+    //implementation 'com.ibroadlink:BLLetFamilyAndroid:2.8.+' // family
+    //implementation(name: 'blfamily-debug', ext: 'aar')
+    
     configurations {
         all*.exclude group:'com.ibroadlink',  module:'BLLetCoreAndroid'
-        //all*.exclude group:'com.ibroadlink',  module:'BLLetBaseAndroid'
+        //all*.exclude group:'com.ibroadlink',  module:'BLLetBaseAndroid' // 如果不使用aar，注释这一句
     }
     // fot local debug end
     
