--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -235,6 +235,9 @@
         <activity
             android:name=".activity.device.DevFirmwareLogActivity"
             android:theme="@style/ActivityStyle"/>
+        <activity
+            android:name=".activity.ihgBulbWall.IhgBulbWallMainActivity"
+            android:theme="@style/ActivityStyle"/>
     </application>
 
 </manifest>
