--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ buildscript {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        maven {
+            url 'https://jitpack.io'
+            name 'Jitpack'
+        }
         google()
         maven {
             url 'http://maven.aliyun.com/nexus/content/repositories/releases/'
@@ -33,6 +37,10 @@ allprojects {
         }
         maven {
             url 'http://maven.aliyun.com/nexus/content/repositories/releases/'
+        }
+        maven {
+            url 'https://jitpack.io'
+            name 'Jitpack'
         }
     }
 }
