将原来的family代码清除，启用BLSFamily库

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
 //    implementation 'com.ibroadlink:BLLetCoreAndroid:2.11.+'
 //    implementation 'com.ibroadlink:BLLetAccountAndroid:2.8.+'
 //    implementation 'com.ibroadlink:BLLetIRCodeAndroid:2.11.+'
+//    implementation 'com.ibroadlink:BLLetBaseAndroid:2.11.5' 
+//    implementation 'com.ibroadlink:BLSFamilyAndroid:1.0.+'
 //    // normal end
 
 
@@ -94,6 +96,9 @@ dependencies {
     
     //implementation 'com.ibroadlink:BLLetFamilyAndroid:2.8.+' // family
     //implementation(name: 'blfamily-debug', ext: 'aar')
+
+    //implementation 'com.ibroadlink:BLSFamilyAndroid:1.0.+' // blsfamily
+    implementation(name: 'blsfamily-debug', ext: 'aar')
   
     implementation 'com.android.support:support-v4:28.0.0'
     configurations {
