--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,8 @@ dependencies {
     //implementation 'com.ibroadlink:BLSFamilyAndroid:1.0.+' // blsfamily
     implementation(name: 'blsfamily-debug', ext: 'aar')
 
+    implementation 'com.ibroadlink:BLLetPluginAndroid:2.7.2' // plugin
+    
     implementation 'com.android.support:support-v4:28.0.0'
     configurations {
         all*.exclude group :'com.ibroadlink',  module :'BLLetCoreAndroid'
