新增一个http压力测试项目，支持超时时间和发送间隔，统计成功次数。 入口device management - > Http Stress Test

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -230,6 +230,9 @@
             android:name=".activity.device.DevStressTestActivity"
             android:theme="@style/ActivityStyle"/>
         <activity
+            android:name=".activity.device.HttpStressTestActivity"
+            android:theme="@style/ActivityStyle"/>
+        <activity
             android:name=".activity.push.PushMainActivity"
             android:theme="@style/ActivityStyle"/>
         <activity
