1. 恢复sp演示页面 2. 修复fastcon虚拟组设备profile缓存异常 3. 修复blsfamily库引起的一个json解析异常

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -277,6 +277,9 @@
         <activity
             android:name=".activity.device.DevGroupConfigEditActivity"
             android:theme="@style/ActivityStyle"/>
+        <activity
+            android:name=".activity.device.DevSpControlActivity"
+            android:theme="@style/ActivityStyle"/>
     </application>
 
 </manifest>
