--- a/picSelector/build.gradle
+++ b/picSelector/build.gradle
@@ -12,12 +12,15 @@ android {
 
     }
     buildTypes {
+        
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-        applicationVariants {
+
+        auxAc {
         }
+
     }
 }
 
