--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ android {
 
         auxAc {
             signingConfig signingConfigs.config
+            debuggable true
             buildConfigField "boolean", "SUPPORT_AUX", "true"
         }
     }
